@@ -68,7 +68,7 @@ billings_datatableUI <- function(id) {
 billings_datatable <- function(input, output, session, dMBillings) {
   ns <- session$ns
 
-  output$billing_options <-  shiny::renderUI({
+  output$billing_options <- shiny::renderUI({
     shinyWidgets::dropdown(
       input_id = ns("billing_options_dropdown"),
       icon = icon("gear"),
@@ -102,8 +102,8 @@ billings_datatable <- function(input, output, session, dMBillings) {
   billings_list <- shiny::eventReactive(
     c(
       dMBillings$billings_listR(),
-      input$printcopy_view,
-      input$billing_types_viewed
+      input$billing_types_viewed,
+      input$billing_reminders_chosen
     ), {
       shiny::validate(
         shiny::need(
@@ -115,6 +115,10 @@ billings_datatable <- function(input, output, session, dMBillings) {
           "No appointments in chosen range"
         )
       )
+
+      # returns list_billings
+      # filtered by payerCode (e.g. bulk billing, DVA, WorkCover)
+      # adds covid19bb if enabled, TRUE is possible bulk-bill incentive opportunity
 
       payerCode <- c()
       if ("Direct 'bulk' billing" %in% input$billing_types_viewed) {
@@ -130,15 +134,15 @@ billings_datatable <- function(input, output, session, dMBillings) {
         payerCode <- c(payerCode, 0, 1, 5:8)
       }
       if (length(payerCode) == length(payerCodePrevious) &&
-          all(payerCode == payerCodePrevious)) {
+        all(payerCode == payerCodePrevious)) {
         # need to compare length as well as each individual element
         # as there is a possibility of 're-cycling'
         # https://stackoverflow.com/questions/10374932/comparing-two-vectors-in-an-if-statement
-        lazy = TRUE
+        lazy <- TRUE
         # don't need to force re-calculation of billings list
         # as reactives have already taken care of recalculation
       } else {
-        lazy = FALSE
+        lazy <- FALSE
         # need to force a re-calculation of billings list
         # as payerCode is currently not a reactive
         payerCodePrevious <- payerCode
@@ -146,12 +150,16 @@ billings_datatable <- function(input, output, session, dMBillings) {
 
       billingslist <- dMBillings$list_billings(
         lazy = lazy,
-        screentag = !input$printcopy_view,
-        screentag_print = input$printcopy_view,
-        rawbilling = TRUE,
         payerCode = payerCode
-        # the 'raw' billings will be in the 'billings' column
       )
+
+      if ("COVID-19 Bulk Billing Incentive" %in% input$billing_reminders_chosen) {
+        billingslist <- billingslist %>>%
+          dplyr::mutate(covid19bb = mapply(
+            check_for_covid19_bulkbilling,
+            InternalID, DOB, Date, Age, MBSItem
+          ))
+      }
 
       return(billingslist)
     }
@@ -161,14 +169,13 @@ billings_datatable <- function(input, output, session, dMBillings) {
     dMBillings$own_billings <- !input$allbillings_view
   })
 
-  check_for_covid19_bulkbilling <- function(InternalID, DOB, Date, Age, billings) {
-
-    if (is.null(billings)) {
+  check_for_covid19_bulkbilling <- function(InternalID, DOB, Date, Age, MBSItem) {
+    if (is.null(MBSItem)) {
       return(as.character(NA))
       # wasn't billed, so can't add a bulk-billing incentive!
     }
 
-    if (any(c(10990, 10991, 10981, 10982) %in% billings)) {
+    if (any(c(10990, 10991, 10981, 10982) %in% MBSItem)) {
       return(as.character(NA))
       # already charged a bulk-billing incentive
     }
@@ -178,7 +185,7 @@ billings_datatable <- function(input, output, session, dMBillings) {
     }
     intID_Date <- data.frame(InternalID = InternalID, Date = Date)
     if (Age >= 50 &&
-        length(dMBillings$dM$atsi_list(intID_Date))) {
+      length(dMBillings$dM$atsi_list(intID_Date))) {
       return("ATSI 50+")
     }
     if (length(dMBillings$dM$pregnant_list(intID_Date))) {
@@ -187,7 +194,8 @@ billings_datatable <- function(input, output, session, dMBillings) {
     if (nrow(dMBillings$dM$postnatal_list(intID_Date,
       include_edc = TRUE, # 'guess' delivery of no known result
       days_min = 0, days_max = 365,
-      outcome = c(0,1)))) { # unknown result or live birth
+      outcome = c(0, 1)
+    ))) { # unknown result or live birth
       # $postnatal_list returns a dataframe, not a vector
       return("Parent of child less than 12 months")
     }
@@ -235,78 +243,91 @@ billings_datatable <- function(input, output, session, dMBillings) {
     return(as.character(NA))
   }
 
-  styled_billings_list <- shiny::reactive({
-    shiny::validate(
-      shiny::need(billings_list(), "No appointments in selected range")
-    )
+  styled_billings_list <- shiny::eventReactive(
+    c(
+      billings_list(),
+      input$printcopy_view
+    ), {
+      shiny::validate(
+        shiny::need(billings_list(), "No appointments in selected range")
+      )
 
-    billings <- billings_list()
-
-    if ("COVID-19 Bulk Billing Incentive" %in% input$billing_reminders_chosen) {
-      billings <- billings %>>%
-        dplyr::mutate(covid19bb = mapply(
-          check_for_covid19_bulkbilling,
-          InternalID, DOB, Date, Age, billings
-        ))
+      billings <- billings_list()
 
       if (input$printcopy_view == TRUE) {
         billings <- billings %>>%
-          dplyr::mutate(
-            billingtag_print = dplyr::if_else(
-              is.na(covid19bb),
-              billingtag_print,
-              paste(
-                billingtag_print,
-                paste0(", COVID-19 opportunity [", covid19bb, "]")
-              )
-            )
+          dMeasureBillings::tag_billings_list(
+            screentag_print = TRUE,
+            screentag = FALSE
           )
       } else {
         billings <- billings %>>%
-          dplyr::mutate(
-            billingtag = dplyr::if_else(
-              is.na(covid19bb),
-              billingtag,
-              paste0(
+          dMeasureBillings::tag_billings_list(
+            screentag_print = FALSE,
+            screentag = TRUE
+          )
+      }
+
+      if ("COVID-19 Bulk Billing Incentive" %in% input$billing_reminders_chosen) {
+        if (input$printcopy_view == TRUE) {
+          billings <- billings %>>%
+            dplyr::mutate(
+              billingtag_print = dplyr::if_else(
+                is.na(covid19bb),
+                billingtag_print,
+                paste(
+                  billingtag_print,
+                  paste0(", COVID-19 opportunity [", covid19bb, "]")
+                )
+              )
+            )
+        } else {
+          billings <- billings %>>%
+            dplyr::mutate(
+              billingtag = dplyr::if_else(
+                is.na(covid19bb),
                 billingtag,
-                dMeasure::semantic_button(
-                  "COVID-19 BB",
-                  colour = "pink",
-                  popuphtml = paste0(
-                    "<p><font size = \'+0\'>",
-                    covid19bb,
-                    "</p>"
+                paste0(
+                  billingtag,
+                  dMeasure::semantic_button(
+                    "COVID-19 BB",
+                    colour = "pink",
+                    popuphtml = paste0(
+                      "<p><font size = \'+0\'>",
+                      covid19bb,
+                      "</p>"
+                    )
                   )
                 )
               )
             )
-          )
+        }
+      }
+
+      if (input$printcopy_view == TRUE) {
+        # printable/copyable view
+        datatable_styled(billings %>>%
+          dplyr::select(
+            Patient, Date, AppointmentTime, Status, VisitType,
+            Provider, billingtag_print
+          ),
+        colnames = c("Billings" = "billingtag_print")
+        )
+      } else {
+        # fomantic/semantic tag view
+        datatable_styled(billings %>%
+          dplyr::select(
+            Patient, Date, AppointmentTime, Status, VisitType,
+            Provider, billingtag
+          ),
+        escape = c(5),
+        copyHtml5 = NULL, printButton = NULL, # no copy/print buttons
+        downloadButton = NULL,
+        colnames = c("Billings" = "billingtag")
+        )
       }
     }
-
-    if (input$printcopy_view == TRUE) {
-      # printable/copyable view
-      datatable_styled(billings %>>%
-        dplyr::select(
-          Patient, Date, AppointmentTime, Status, VisitType,
-          Provider, billingtag_print
-        ),
-      colnames = c("Billings" = "billingtag_print")
-      )
-    } else {
-      # fomantic/semantic tag view
-      datatable_styled(billings %>%
-        dplyr::select(
-          Patient, Date, AppointmentTime, Status, VisitType,
-          Provider, billingtag
-        ),
-      escape = c(5),
-      copyHtml5 = NULL, printButton = NULL, # no copy/print buttons
-      downloadButton = NULL,
-      colnames = c("Billings" = "billingtag")
-      )
-    }
-  })
+  )
 
   output$billings_table <- DT::renderDT({
     styled_billings_list()
